--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -33,12 +33,12 @@ gesture: swipe up	xdotool key super+Page_Down
 # GNOME SHELL move to prev workspace
 gesture: swipe down	xdotool key super+Page_Up
 
-# GNOME/Browser go back
-gesture: swipe right	xdotool key alt+Left
+# GNOME SHELL move application to next workspace
+gesture: swipe right	xdotool key super+shift+Page_Down
 
-# GNOME/Browser go forward
-gesture: swipe left	xdotool key alt+Right
+# GNOME SHELL move application to prev workspace
+gesture: swipe left	xdotool key super+shift+Page_Up
 
 # GNOME SHELL open/close overview
-gesture: pinch in	xdotool key super+s
-gesture: pinch out	xdotool key super+s
+gesture: pinch in	xdotool key super
+gesture: pinch out	xdotool key super
